fix: types of filter object, supported variable scrollbar height and remove console.log

--- a/src/assets/scss/_custom-global.scss
+++ b/src/assets/scss/_custom-global.scss
@@ -12,7 +12,7 @@
 
 ::-webkit-scrollbar {
   width: var(--scrollbar-width);
-  height: 10px;
+  height: var(--scrollbar-height, 10px);
   background-color: var(--scrollbar-bg-color);
 }
 
